[package]
name = "risky"
version = "0.1.0"
authors = ["AnonymousDapper"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0
lto = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
spin = "0.9.2"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
#bitflags = "1.3.2"